# fgputensor

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: linux-gnu-cmake.yml  linux-intel-cmake.yml
example/: CMakeLists.txt  simple_2d_array.f90
src/: CMakeLists.txt  FGPUTensor.f90  FGPUTensor_HIP.f90  FGPUTensor_HIP_Utils.f90  FGPUTensor_HIP_enums.f90  FGPUTensor_Utils.f90
